# rsa-cryptography-rust

./: .gitignore  Cargo.toml  README.md
benches/: big_numbers.csv  buffer_read_bench.rs  my_bench.rs
examples/: create_key.rs
messages/: lorem.txt  simple.txt
src/: encryption.rs  euclidean.rs  key_generator.rs  main.rs  mod_exponentiation.rs  primality.rs
src/lib/: encoding.rs  encryption.rs  error.rs  key.rs  key_generator.rs  lib.rs  math.rs  rrsa_common.rs
src/lib/encoding/: mod.rs
src/lib/key/: file.rs  generation.rs  mod.rs  reading.rs  writing.rs
src/lib/key/file/: mod.rs  reading.rs  writing.rs
src/lib/key/str/: mod.rs  reading.rs  writing.rs
